# x-mix

./: .gitignore  Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml
circuits/: transaction.circom  transaction.r1cs
circuits/transaction_js/: transaction.wasm
clients/js/: .gitignore  README.md  convert_key.js  copy-circuits.sh  package.json  pnpm-lock.yaml
clients/js/circuits/: verification_key.json
clients/js/src/utils/: circuit.ts  crypto.ts  index.ts  merkle.ts  pda.ts
clients/js/test/: _constants.ts  _create.test.ts  _deposit.test.ts  _helpers.ts  _setup.ts  _transferSol.test.ts  transferSpl.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
dapp/: README.md  app.js  index.html
program/: Cargo.toml  README.md
program/src/: lib.rs
program/src/instructions/: deposit.rs  initialize.rs  mod.rs  rotate_authority.rs  set_pause.rs  transfer.rs  update_root.rs  withdraw.rs
program/src/state/: mod.rs
program/src/utils/: constants.rs  error.rs  helpers.rs  mod.rs  verifier.rs  verifying_key.rs
relayer/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
relayer/src/: api-server.ts  config.ts  deposit-decoder.ts  deposit-history.ts  deposit-key.ts  engine.ts  index.ts  indexer.ts  logger.ts  merkle.ts  proof-builder.ts  relay-requests.ts  request-builder.ts  request-service.ts  store.ts  transfer-executor.ts  types.ts
scripts/: emergency-withdraw.mjs  generate-clients.mjs  generate-idls.mjs  init-pool.mjs
