[package]
name = "x-mix-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "XmixQ4DB8MtKcEFhyjWs1gZtdaF3YDuF4ieGLJ3xotv"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
devnet = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
ark-bn254 = { version = "0.5.0", features = [] }
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
groth16-solana = "0.2.0"
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
solana-program = "3.0.0"
solana-bn254 = "3.1.2"
solana-security-txt = "1.1.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
